<!--
* Author: Yanfei Dai, Ang Li
* Description: layout for start activity
* Date: October 21, 2014
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.custom.com/apk/res/fei.ang.gobang"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <fei.ang.gobang.ChessBoard
	    android:id="@+id/chessboardView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" />

	<Button
	    android:id="@+id/button2"
	    android:layout_width="70dp"
	    android:layout_height="35dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentStart="true"
	    android:layout_below="@+id/button1"
	    android:layout_marginLeft="23dp"
	    android:layout_marginStart="23dp"
	    android:background="#666666"
	    android:text="@string/undo"
	    android:textColor="#f2f2f2"
	    android:textSize="13sp" />

	<Button
	    android:id="@+id/button5"
	    android:layout_width="75dp"
	    android:layout_height="35dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="38dp"
	    android:layout_marginStart="16dp"
	     android:layout_marginLeft="16dp"
	    android:background="#666666"
	    android:text="@string/stopmusic"
	    android:textColor="#f2f2f2"
	    android:textSize="13sp" />

	<Button
	    android:id="@+id/button4"
	    android:layout_width="75dp"
	    android:layout_height="35dp"
	    android:layout_alignBottom="@+id/button1"
	    android:layout_alignLeft="@+id/button5"
	    android:layout_alignStart="@+id/button5"
	    android:background="#666666"
	    android:text="@string/playmusic"
	    android:textColor="#f2f2f2"
	    android:textSize="13sp" />

	<Button
	    android:id="@+id/button3"
	    android:layout_width="70dp"
	    android:layout_height="35dp"
	    android:layout_alignBaseline="@+id/button5"
	    android:layout_alignBottom="@+id/button5"
	    android:layout_marginLeft="26dp"
	    android:layout_marginStart="26dp"
	    android:layout_toRightOf="@+id/button5"
	    android:layout_toEndOf="@+id/button5"
	    android:background="#666666"
	    android:text="@string/back"
	    android:textColor="#f2f2f2"
	    android:textSize="13sp" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="70dp"
	    android:layout_height="35dp"
	    android:layout_above="@+id/button5"
	    android:layout_alignLeft="@+id/button2"
	    android:layout_alignStart="@+id/button2"
	    android:layout_marginBottom="18dp"
	    android:layout_marginEnd="16dp"
	    android:layout_marginRight="16dp"
	    android:background="#666666"
	    android:text="@string/restart"
	    android:textColor="#f2f2f2"
	    android:textSize="13sp" />

	<Button
	    android:id="@+id/button6"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="70dp"
	    android:layout_height="35dp"
	    android:layout_alignRight="@+id/button3"
	    android:layout_alignEnd="@+id/button3"
	    android:layout_alignTop="@+id/button4"
	    android:text="@string/backgroundcolor" 
	    android:background="#666666"
	    android:textColor="#f2f2f2"
	    android:textSize="13sp" />
	
</RelativeLayout>